<resources>
    <string name="app_name">Uang</string>
    <string name="income">Income</string>
    <string name="rp_250000">Rp. 25000</string>
    <string name="expenses">Expenses</string>
    <string name="total_balan">Total Balance</string>
    <string name="total_balance_amount">Rp. 25000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="food">Food</string>
    <string name="shopping">Shopping</string>
    <string name="transport">Transport</string>
    <string name="health">Health</string>
    <string name="education">Education</string>
    <string name="other">Other</string>
    <string name="dashboard_Fragment">Dashboard</string>
    <string name="all_transaction">Transaction</string>
    <string name="profile_fragment">Profile</string>
    <string name="category">Category</string>
    <string name="Trash">Trash</string>
    <string name="transaction_details">Transaction Detail</string>
    <string name="are_you_sure_want_to_delete_the_transaction">Are you sure want to delete the transsaction</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="all">All</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="all_transactions">All Transaction</string>
    <string name="january">January</string>
    <string name="december">December</string>
    <string name="november">November</string>
    <string name="october">October</string>
    <string name="september">September</string>
    <string name="august">Agustus</string>
    <string name="july">July</string>
    <string name="june">June</string>
    <string name="may">May</string>
    <string name="april">April</string>
    <string name="march">March</string>
    <string name="february">February</string>
    <string name="monthlyBudget">Monthly Budget</string>
    <string name="your_expenses">Your Expanses</string>
    <string name="icon">Icon</string>
    <string name="your_transactions">Your Transaction</string>
    <string name="settings">Settings</string>
    <string name="darkmode">Dark Mode</string>
    <string name="backup_data">Backup Data</string>
    <string name="share_to_friends">Share</string>
    <string name="about_us">About Us</string>
    <string name="simple">Simple</string>
    <string name="expense_tracking">Expense Income Tracking</string>
    <string name="we_require_your_google_account_with_google_drive_permission_to_keep_backup_of_all_your_data">Please log in with google account so we can use it for backup also</string>
    <string name="signup_with_google">Sign up with google account</string>
    <string name="web_client_id">3753961027-e3qttvsb21srjdd266og43da4j72ub5c.apps.googleusercontent.com</string>

</resources>