<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dominantColor"
    tools:context=".UserAuthActivity">


    <LinearLayout
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="204dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple"
            android:textColor="@color/textColor"
            android:textSize="42sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_tracking"
            android:textColor="@color/textColor"
            android:textSize="38sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="64dp"
            android:text="@string/we_require_your_google_account_with_google_drive_permission_to_keep_backup_of_all_your_data"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/google_signUp"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:paddingStart="42dp"
        android:paddingEnd="42dp"
        android:backgroundTint="@color/secondaryColor"
        android:text="@string/signup_with_google"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>