<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dominantColor"
    tools:context=".ui.fragment.alltransaction.AllTransactionFragment">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/all"
            style="@style/selector_button_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/button_selector_background"
            android:text="@string/all"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/monthly"
            style="@style/selector_button_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/button_selector_background"
            android:text="@string/monthly" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yearly"
            style="@style/selector_button_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@drawable/button_selector_background"
            android:text="@string/yearly" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleSelector">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/all_transactions"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/yearSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="@id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/title" />


            <HorizontalScrollView
                android:id="@+id/selectors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@id/title">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="16dp"
                        android:layout_height="20dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/January"
                        style="@style/selector_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/january"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/February"
                        style="@style/selector_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/february"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/March"
                        style="@style/selector_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/march"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/April"
                        style="@style/selector_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/april"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/May"
                        style="@style/selector_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/may"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/June"
                        style="@style/selector_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/june"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/July"
                        style="@style/selector_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/july"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/August"
                        style="@style/selector_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/august"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/September"
                        style="@style/selector_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/september"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/October"
                        style="@style/selector_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/october"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/November"
                        style="@style/selector_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/november"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/December"
                        style="@style/selector_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center"
                        android:text="@string/december"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                </LinearLayout>


            </HorizontalScrollView>

            <TextView
                android:id="@+id/noTransactionsDoneText"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectors" />

            <androidx.cardview.widget.CardView
                android:id="@+id/monthlyCard"
                android:layout_width="match_parent"

                android:layout_height="180dp"
                android:layout_margin="16dp"
                android:backgroundTint="@color/primaryColor"
                app:cardCornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectors">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/monthlyBudget"
                        android:textColor="@color/textColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="4dp"
                        android:text=""
                        android:textColor="@color/textColor"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text" />

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/your_expenses"
                        android:textColor="@color/textColor"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/budget" />

                    <TextView
                        android:id="@+id/expense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:text=""
                        android:textColor="@color/textColor"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text2" />


                    <ImageView
                        android:id="@+id/indicator"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="16dp"
                        android:contentDescription="@string/icon"
                        android:src="@drawable/ic_positive_amount"
                        app:layout_constraintBottom_toBottomOf="@id/text2"
                        app:layout_constraintStart_toEndOf="@id/text2"
                        app:layout_constraintTop_toTopOf="@id/text2" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/round"
                        android:paddingStart="12dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="4dp"
                        android:text=""
                        android:textColor="@color/coloronPrimary"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        />


                    <org.eazegraph.lib.charts.PieChart
                        android:layout_width="160dp"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        app:egLegendTextSize="18sp"
                        app:egUsePieRotation="true"
                        app:egValueTextSize="36sp"
                        app:egInnerPaddingColor="@color/primaryColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>




            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22dp"
                android:text="@string/your_transactions"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/monthlyCard" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/transactionRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="90dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/text1" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>