<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.expanse.ExpanseFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView2"
            style="@style/total_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="Add Expanse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/title"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:endIconDrawable="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/amount"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:endIconDrawable="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_amount"
                android:layout_width="match_parent"

                android:layout_height="56dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/date"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/amount"
            app:layout_constraintStart_toStartOf="@+id/amount"
            app:layout_constraintTop_toBottomOf="@+id/amount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_date"
                android:layout_width="match_parent"
                android:layout_height="56dp"

                android:focusable="false"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/note"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"

            app:layout_constraintTop_toBottomOf="@id/date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_note"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxLength="300" />

        </com.google.android.material.textfield.TextInputLayout>

        <GridLayout
            android:id="@+id/selector2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:columnCount="3"
            android:padding="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/note">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/food"
                style="@style/selector_button"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:text="@string/food"
                android:textSize="10sp"
                app:icon="@drawable/ic_baseline_fastfood_24"
                app:iconGravity="textTop"
                app:iconPadding="12dp"
                app:iconSize="32dp"
                tools:ignore="SmallSp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/shopping"
                style="@style/selector_button"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:text="@string/shopping"
                android:textSize="10sp"
                app:icon="@drawable/baseline_add_shopping_cart_24"
                app:iconGravity="textTop"
                app:iconPadding="12dp"
                app:iconSize="32dp"
                tools:ignore="SmallSp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/transport"
                style="@style/selector_button"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:text="@string/transport"
                android:textSize="10sp"
                app:icon="@drawable/ic_transport"
                app:iconGravity="textTop"
                app:iconPadding="12dp"
                app:iconSize="32dp"
                tools:ignore="SmallSp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/health"
                style="@style/selector_button"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:text="@string/health"
                android:textSize="10sp"
                app:icon="@drawable/baseline_health_and_safety_24"
                app:iconGravity="textTop"
                app:iconPadding="12dp"
                app:iconSize="32dp"
                tools:ignore="SmallSp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/academics"
                style="@style/selector_button"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:text="@string/education"
                android:textSize="10sp"
                app:icon="@drawable/baseline_cast_for_education_24"
                app:iconGravity="textTop"
                app:iconPadding="12dp"
                app:iconSize="32dp"
                tools:ignore="SmallSp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/others"
                style="@style/selector_button"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:text="@string/other"
                android:textSize="10sp"
                app:icon="@drawable/baseline_question_mark_24"
                app:iconGravity="textTop"
                app:iconPadding="12dp"
                app:iconSize="32dp"
                tools:ignore="SmallSp" />

        </GridLayout>

        <Button
            android:id="@+id/add_transaction"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_margin="16dp"
            android:text="@string/add_transaction"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selector2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>